# bitbang-i2c-test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  softI2c.c  softi2c-test.c
src/include/: softI2c.h
